<resources>
    <string name="app_name">Bullzye</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnSub">Submit</string>
    <string name="action_exit">Exit</string>
    <string name="TextViewRules">Rules</string>
    <string name="TextViewRuleUni">Try to guess a number with 4 different digits and click submit\nGuessing digit on the same place will give you a Hit\nGuessing digit not on the same place will give you an Almost\nBy guessing 1328 on 1234, you get 1 Hit and 2 Almost
    </string>
    <string name="TextViewRule1">Try to guess a number with 4 different digits and click submit</string>
    <string name="TextViewRule2">Guessing digit on the same place will give you a Hit</string>
    <string name="TextViewRule3">Guessing digit not on the same place will give you an Almost</string>
    <string name="TextViewRule4">By guessing 1328 on 1234, you get 1 Hit and 2 Almost</string>
    <string name="EditTextInput">Guess the number</string>
    <string name="Game_GameNum_Setter_InputNotValid">Input not valid - setGameNum</string>
    <string name="NoInputError">Enter number.</string>
    <string name="No4DiffNumbersError">Try 4 different digits.</string>
    <string name="WrongInputSizeError">Input size wrong.</string>
    <string name="TextViewTotalGuesses">"Total: "</string>

    <string name="TextViewLastGuess">"Last: "</string>
    <string name="rules_cssButton_label">Rules</string>
    <string name="about_cssButton_label">About</string>
    <string name="RupppinImageDesc">RuppinLogo</string>
    <string name="ResetButtonLabel">Reset</string>
    <string name="AlmostTextViewLabel">Almost</string>
    <string name="HitsTextViewLabel">Hits</string>
    <string name="BestScoreTextViewLabel">Best:</string>
    <string name="LastGuessTextViewLabel">Last:</string>
    <string name="ToatalGuessesTextViewLabel">Total:</string>
</resources>
