<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="3dp"
        card_view:cardBackgroundColor="@color/abc_primary_text_material_dark"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rulesLayout"
                android:layout_margin="20dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/TextViewRules"
                    android:id="@+id/textViewRules"
                    android:textColor="#008080"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/TextViewRule1"
                        android:id="@+id/textView3"
                        android:textColor="#008080"
                        android:singleLine="false"
                        android:layout_marginBottom="2dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/TextViewRule2"
                        android:id="@+id/textView2"
                        android:textColor="#008080"
                        android:layout_marginBottom="2dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/TextViewRule3"
                        android:id="@+id/textView4"
                        android:textColor="#008080"
                        android:layout_marginBottom="2dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/TextViewRule4"
                        android:id="@+id/textView5"
                        android:textColor="#008080"
                        />
                </LinearLayout>
            </LinearLayout>

            </ScrollView>


    </android.support.v7.widget.CardView>
</LinearLayout>