<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#E0E0E0"
    android:padding="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollview"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/outterLayout">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    card_view:cardElevation="5dp"
                    >
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#fffdfdfe">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageView"
                            android:src="@drawable/ruppin"
                            android:contentDescription="RuppinLogo"
                            android:padding="5dp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardElevation="5dp"
                    >
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="#FFFFFF">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:id="@+id/guessEditText"
                            android:layout_gravity="center_horizontal"
                            android:hint="@string/EditTextInput"
                            android:layout_marginRight="50dp"
                            android:layout_marginLeft="50dp"
                            android:gravity="center_horizontal"
                            android:maxLength="4" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:id="@+id/ratinglayout"
                            android:layout_gravity="center_horizontal">

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:paddingRight="18dp">

                                <RatingBar
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/ratingBarHits"
                                    android:numStars="4"
                                    android:isIndicator="true"
                                    android:clickable="false"
                                    style="?android:attr/ratingBarStyleSmall" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?android:attr/textAppearanceSmall"
                                    android:text="Hits"
                                    android:id="@+id/hitsTextView"
                                    android:layout_marginLeft="10dp" />

                            </LinearLayout>

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal">

                                <RatingBar
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/ratingBarAlmost"
                                    android:numStars="4"
                                    android:isIndicator="true"
                                    android:clickable="false"
                                    style="?android:attr/ratingBarStyleSmall"
                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="?android:attr/textAppearanceSmall"
                                    android:text="Almost"
                                    android:id="@+id/almostTextView"
                                    android:layout_marginLeft="10dp" />
                            </LinearLayout>

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/textViewNumGuesses" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center_horizontal">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/btnSub"
                                android:id="@+id/buttonSubmit"
                                android:layout_gravity="center_horizontal"
                                android:enabled="false"
                                android:layout_marginBottom="5dp"
                                />

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Reset"
                                android:id="@+id/buttonReset" />
                        </LinearLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    card_view:cardElevation="5dp"
                    >
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/TextViewRules"
                            android:id="@+id/textViewRules"
                            android:textColor="#008080"
                            android:textStyle="bold"
                            android:gravity="center_horizontal"
                            />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/TextViewRule1"
                                android:id="@+id/textView3"
                                android:textColor="#008080"
                                android:singleLine="false"
                                android:layout_marginBottom="2dp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/TextViewRule2"
                                android:id="@+id/textView2"
                                android:textColor="#008080"
                                android:layout_marginBottom="2dp"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/TextViewRule3"
                                android:id="@+id/textView4"
                                android:textColor="#008080"
                                android:layout_marginBottom="2dp"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/TextViewRule4"
                                android:id="@+id/textView5"
                                android:textColor="#008080"
                                />
                        </LinearLayout>
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="15dp"
                    card_view:cardElevation="5dp"
                    >
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:padding="10dp"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/textViewLastGuess" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/textViewBestGuesses" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </ScrollView>
        <!--<com.software.shell.fab.ActionButton-->
            <!--android:id="@+id/action_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--fab:button_color="@color/fab_material_teal_500"-->
            <!--fab:button_colorPressed="@color/fab_material_teal_900"-->
            <!--fab:show_animation="@anim/fab_roll_from_right"-->
            <!--fab:hide_animation="@anim/fab_roll_to_down"-->
            <!--fab:image="@drawable/fab_exit_icon_white"-->
            <!--/>-->

    </RelativeLayout>


</LinearLayout>
